<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <TextView
        android:id="@+id/labelNewUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="74dp"
        android:text="@string/novo_usuario"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputNewUsr"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/labelNewUsr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelNewUsr">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editNewUsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_novo_usr" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lblNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:text="@string/nova_senha"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNewUsr" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputNewPass"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblNewPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblNewPass">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_nova_senha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/lblConfPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/conf_senha"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewPass">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editConfNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_conf_senha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btn_confirma"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="55dp"
        android:text="@string/btn_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnConf" />
</android.support.constraint.ConstraintLayout>