<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/labelUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="12dp"
        android:text="@string/usuario"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutUser"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutUser" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lbl_usr" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/labelSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="20dp"
        android:text="@string/senha"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutPass"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayoutPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayoutPass" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelSenha"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUser">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_senha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/btn_entrar"
        app:layout_constraintBottom_toBottomOf="@+id/btnCancel"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="53dp"
        android:text="@string/btn_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEnter"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass" />

</android.support.constraint.ConstraintLayout>